fix: navbar gap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -141,21 +141,6 @@ body {
   position: relative;
 }
 
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("/grain-dark.png");
-  background-repeat: repeat;
-  background-size: 400px 400px;
-  opacity: 0.25;
-  pointer-events: none;
-  z-index: 9999;
-  filter: brightness(0.5);
-}
 
 .dark {
   /* Tokyo Night Theme */
